[gd_scene load_steps=6 format=2]

[ext_resource path="res://networkSetup.gd" type="Script" id=1]
[ext_resource path="res://Map.gd" type="Script" id=2]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.756863, 0.756863, 0.756863, 1 )

[sub_resource type="PlaneMesh" id=2]
material = SubResource( 1 )
size = Vector2( 50, 50 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 25, 1, 25 )

[node name="Map" type="Spatial"]
script = ExtResource( 2 )

[node name="NetworkSetup" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NetworkSetup"]
anchor_left = 12.8
anchor_top = 7.5
anchor_right = 12.8
anchor_bottom = 7.5
margin_left = -175.0
margin_top = -90.0
margin_right = 175.0
margin_bottom = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ipAddress" type="LineEdit" parent="NetworkSetup/VBoxContainer"]
margin_right = 350.0
margin_bottom = 24.0
align = 1
placeholder_text = "IP Address"

[node name="Host" type="Button" parent="NetworkSetup/VBoxContainer"]
margin_top = 28.0
margin_right = 350.0
margin_bottom = 88.0
rect_min_size = Vector2( 0, 60 )
text = "Host"

[node name="Join" type="Button" parent="NetworkSetup/VBoxContainer"]
margin_top = 92.0
margin_right = 350.0
margin_bottom = 152.0
rect_min_size = Vector2( 0, 60 )
text = "Join"

[node name="Floor" type="StaticBody" parent="."]

[node name="CSGMesh" type="CSGMesh" parent="Floor"]
mesh = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
shape = SubResource( 3 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 17, 0 )
shadow_enabled = true
[connection signal="text_changed" from="NetworkSetup/VBoxContainer/ipAddress" to="NetworkSetup" method="_on_ipAddress_text_changed"]
[connection signal="pressed" from="NetworkSetup/VBoxContainer/Host" to="NetworkSetup" method="_on_Host_pressed"]
[connection signal="pressed" from="NetworkSetup/VBoxContainer/Join" to="NetworkSetup" method="_on_Join_pressed"]
